--- a/README
+++ b/README
@@ -4,6 +4,12 @@ Modern, Lightweight and distraction free media experience.
 
 See http://ikeydoherty.github.io/budgie/ for roadmap and features
 
+Notes
+----
+You must have xdg-user-dirs installed to currently use Budgie.
+This is merely because we use glib special directories to detect
+where you keep your music ($HOME/Music, but i18n capable)
+
 Authors
 ----
  * Ikey Doherty <ikey.doherty@gmail.com>
