--- a/README.mkd
+++ b/README.mkd
@@ -30,6 +30,12 @@ You must have xdg-user-dirs installed to currently use Budgie.
 This is merely because we use glib special directories to detect
 where you keep your music ($HOME/Music, but i18n capable)
 
+If you install from source and not from a distribution package, please
+ensure you rebuild the glib schemas to prevent a startup crash:
+
+    $ sudo glib-compile-schemas /usr/share/glib-2.0/schemas
+
+
 Authors
 -------
  * Ikey Doherty <ikey.doherty@gmail.com>
