--- a/README.mkd
+++ b/README.mkd
@@ -1,43 +1,4 @@
-budgie - Simple Media Player using GTK3.10 written in C
-=======================================================
+budgie-media-player
+-----------------
 
-Modern, Lightweight and distraction free media experience.
-
-See http://ikeydoherty.github.io/budgie/ for roadmap and features
-
-Building from Source
---------------------
-
-First, make sure you have all dependencies installed.
-
-On Ubuntu:
-
-    $ sudo apt-get install libgtk-3-dev xdg-user-dirs \
-        libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev \
-        libid3-dev libgdbm-dev
-
-To build:
-
-    $ ./autogen.sh
-    $ ./configure
-    $ make
-    $ make install
-
-Notes
------
-
-You must have xdg-user-dirs installed to currently use Budgie.
-This is merely because we use glib special directories to detect
-where you keep your music ($HOME/Music, but i18n capable)
-
-If you install from source and not from a distribution package, please
-ensure you rebuild the glib schemas to prevent a startup crash:
-
-    $ sudo glib-compile-schemas /usr/share/glib-2.0/schemas
-
-
-Authors
--------
- * Ikey Doherty <ikey.doherty@gmail.com>
-
-License: GPLv2+
+This is a personal project. Please do not consider for day-to-day usage. Git repo is simply being used to manage this.
